# wasmstandalone

./: .gitignore  Cargo.toml
lib/execute/src/: lib.rs
proxylib/: Cargo.toml
proxylib/src/: lib.rs
sip-bins/: Cargo.toml
sip-test/: Cargo.toml  make
sip-test/src/: lib.rs  template.rs  wasm_utils.rs
sip-test/tmp/: sip_test.wasm
src/: main.rs
